entity_macros/tests/ui/derive/ent/unexpected-ent-edge-type-assignment.stderr
error: Unexpected edge type assignment
  --> $DIR/unexpected-ent-edge-type-assignment.rs:17:23
   |
17 |     #[ent(edge(type = 3))]
   |                       ^
